# cshield

CShield/: Cargo.toml  README.md
CShield-main/: README.md  go.mod  go.sum  main.go
CShield-main/configs/: app.json  asn_blocks.json  features.json  load_balancer.json  login.json  peers.json  waf.json
CShield-main/internal/analytics/: metrics.go
CShield-main/internal/auth/: auth.go
CShield-main/internal/cache/: cache.go
CShield-main/internal/captcha/: service.go
CShield-main/internal/core/: gate.go
CShield-main/internal/cvac/: engine.go
CShield-main/internal/cwall/: cwall.go
CShield-main/public/: add_proxy.html  add_proxy.html.fasthttp.br  analytics.html  analytics.html.fasthttp.br  captcha.html  captcha.html.fasthttp.br  dashboard.html  dashboard.html.fasthttp.br  features.html  features.html.fasthttp.br  login.html  login.html.fasthttp.br  logs.html  proxies.html  proxies.html.fasthttp.br  settings.html  settings.html.fasthttp.br
CShield/configs/: app.json  rate_limiting.json  whitelist.json
CShield/public/: actions.html  add_proxy.html  analytics.html  captcha.html  dashboard.html  features.html  login.html  logs.html  proxies.html  register.html  settings.html  users.html
CShield/public/errors/: 403.html  404.html  429.html  502.html  503.html  direct-ip.html  edge-down.html  maintenance.html
CShield/src/: config.rs  main.rs  state.rs
CShield/src/internal/: analytics.rs  api.rs  auth.rs  cache.rs  captcha.rs  core.rs  cvac.rs  cwall.rs  fallback.rs  geo.rs  mod.rs  proxy.rs  ratelimit.rs  security.rs  storage.rs  waf.rs
(+17 files in other folders)
