[package]
name = "cshield"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors", "compression-br", "compression-gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
redis = { version = "0.24", features = ["tokio-comp"] }
mongodb = "2.8"
bcrypt = "0.15"
tracing-subscriber = "0.3"
hex = "0.4"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures = "0.3"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "5.5"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
